@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 3.5-3.013
-Date: 2025-11-17
+Version: 3.5-3.014
+Date: 2025-11-19
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
