@@ -17,4 +17,4 @@ date version nhelpfiles nobjects ndatasets Rlines srclines
 "2025-07-20" "3.5-0" 242 562 0 34429 6364
 "2025-07-22" "3.5-2" 242 564 0 34447 6364
 "2025-09-22" "3.5-3" 242 565 0 34506 6364
-"2025-11-17" "3.5-3.013" 246 574 0 34827 6364
+"2025-11-19" "3.5-3.014" 246 574 0 34849 6364
